--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,8 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-<%= react_component('HelloMessage', name: 'John') %>
+
+<%= react_component('Main') %>
+
+<input type="hidden" id="user_long" />
+<input type="hidden" id="user_lat" />
+<div id="map" style="width:250px;height:250px;"></div>
+
+<script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script>
