--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,10 @@
 
-<%= react_component('Main') %>
+<%= form_for(@search) do |f| %>
+  <%=f.hidden_field :long, id:"user_long" %>
+  <%=f.hidden_field :lat, id:"user_lat" %>
+  <button name="button" type="submit">Button</button>
+<% end %>
 
-<input type="hidden" id="user_long" />
-<input type="hidden" id="user_lat" />
 <div id="map" style="width:250px;height:250px;"></div>
 
 <script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script>
