--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,5 @@
+<%= react_component 'Main' %>
 
-<%= form_for(@search) do |f| %>
-  <%=f.hidden_field :long, id:"user_long" %>
-  <%=f.hidden_field :lat, id:"user_lat" %>
-  <%= image_submit_tag "cute_tooth.png", height: '320', width: '350', class: "test" %>
-
-<% end %>
-
-<div id="map" style="width:250px;height:250px;"></div>
-
+<input id="user_long" type="hidden" value=""/>
+<input id="user_lat" type="hidden" value=""/>
 <script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script>
-
-<!-- <img src="cute_tooth.png" height="321" width="350"> -->
