--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,7 @@
 
 <input id="user_long" type="hidden" value=""/>
 <input id="user_lat" type="hidden" value=""/>
+
+<div id="map" style="width:250px;height:250px;"></div>
+
 <script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script>
