--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,9 @@
-<%= react_component 'Main' %>
+<div class="row">
+  <div class="twelve columns text-center">
+    <h1 id="title-text">Sweet T<span id="pink">oo</span>th <%= image_tag 'cute_tooth.png', class: "home-logo" %></h1>
+    <%= image_tag 'Ice_Cream.png', class: "ice-cream" %>
+  <div>
+</div>
 
 <input id="user_long" type="hidden" value=""/>
 <input id="user_lat" type="hidden" value=""/>
