clean up homepage

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
 <div class="row">
   <div class="twelve columns text-center">
-    <h1 id="title-text">Sweet T<span id="pink">oo</span>th <%= image_tag 'cute_tooth.png', class: "home-logo" %></h1>
-    <%= image_tag 'Ice_Cream.png', class: "ice-cream" %>
+    <div class="panel">
+      <h1 id="title-text">Sweet T<span id="pink">oo</span>th <%= image_tag 'cute_tooth.png', class: "home-logo" %></h1>
+      <%= image_tag 'Ice_Cream.png', class: "ice-cream" %>
+    </div>
   <div>
 </div>
 
