--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,8 @@
 
 <input id="user_long" type="hidden" value=""/>
 <input id="user_lat" type="hidden" value=""/>
-
-<div id="map" style="width:250px;height:250px;"></div>
+<div id="map" style="width:800px;height:600px;"></div>
 
 <script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script>
+
+<%= react_component 'Main' %>
