--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -58,3 +58,13 @@ transform: scale(1, 1);
   animation:none;
   text-decoration:none;
 }
+
+.hide-map {
+  width: 0px;
+  height: 0px;
+}
+
+.show-map{
+  width: 1000px;
+  height: 800px;
+}
