--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,11 @@
 <input id="user_long" type="hidden" value=""/>
 <input id="user_lat" type="hidden" value=""/>
 <%= react_component 'Main', img_src: image_url('Ice_Cream.png') %>
-<div id="map" class="hide-map"></div>
+
+<div class="row">
+  <div class="flex">
+    <div id="map" class="hide-map"></div>
+  </div>
+</div>
 
 <script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script>
